Fix issue where share appearing in controls on mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -307,6 +307,12 @@ th, td {
   font-size: 1.2em;
 }
 
+@media (max-width: 720px) {
+  #petition_get_link {
+    display: none;
+  }
+}
+
 .logo {
   position: absolute;
   bottom: 35px;
